--- a/index.html
+++ b/index.html
@@ -2,68 +2,346 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>30 fotos de viagem</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <title>30 fotos em 3</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="">
     <style>
-        .bg-purple {
-            background: #D8BFD8;
+        body {
+            background-color: #e9ecef;
         }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <img alt="30FOTA" src="...">
-                </a>
-            </div>
-            <p class="navbar-text navbar-right">Bootstrap é muito feio e sem graça</p>
-        </div>
+    <nav class="navbar navbar-light" style="background-color:#ff7777;">
+        <span class="navbar-brand mb-0 h1"></span>
     </nav>
-    <div class="container">
-        <div class="jumbotron bg-purple">
-            <h1>30 fotos de viagem</h1>
-            <p>Aprendendo Bootstrap com memórias de uns anos atrás.</p>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">30 fotos em 3</h1>
+            <p class="lead">Fotos de viagens que eu nunca mais tocava para treinar Bootstrap</p>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-md-6">
-                <div class="thumbnail">
-                    <img src="https://i.ibb.co/x1dcVJv/1.jpg">
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.ibb.co/x1dcVJv/1.jpg" alt="Nepal">
+                    <div class="card-body">
+                        <p class="card-text">Nepal</p>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="thumbnail">
-                    <img src="https://i.ibb.co/4T54S3y/2.jpg">
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.ibb.co/4T54S3y/2.jpg"" alt=" Nepal">
+                    <div class="card-body">
+                        <p class="card-text">Nepal</p>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="thumbnail">
-                    <img src="https://i.ibb.co/4FCscQ9/3.jpg">
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.ibb.co/4FCscQ9/3.jpg" alt="Nepal">
+                    <div class="card-body">
+                        <p class="card-text">Nepal</p>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-md-6">
-                <div class="thumbnail"></div>
+            <div class="col-xl-12">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/a16bvld.jpg" alt="Iran">
+                    <div class="card-body">
+                        <p class="card-text">Iran</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="thumbnail"></div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/cadgx10.jpg" alt="Iran">
+                    <div class="card-body">
+                        <p class="card-text">Iran</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="thumbnail"></div>
+            <div class="col-xl-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/wHnSueW.jpg" alt="Iran">
+                    <div class="card-body">
+                        <p class="card-text">Iran</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/Sx2RMlC.jpg" alt="Georgia">
+                    <div class="card-body">
+                        <p class="card-text">Georgia</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/XnyYPyC.jpg"" alt=" Georgia">
+                    <div class="card-body">
+                        <p class="card-text">Georgia</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/7eZxJld.jpg" alt="Georgia">
+                    <div class="card-body">
+                        <p class="card-text">Georgia</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/Maem7Nv.jpg" alt="Macedônia">
+                    <div class="card-body">
+                        <p class="card-text">Macedônia</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/Bm51YBf.jpg" alt="Macedônia">
+                    <div class="card-body">
+                        <p class="card-text">Macedônia</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/UeAGYMZ.jpg" alt="Macedônia">
+                    <div class="card-body">
+                        <p class="card-text">Macedônia</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/fqXBDKP.jpg" alt="China">
+                    <div class="card-body">
+                        <p class="card-text">China</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/wyFyv80.jpg" alt="China">
+                    <div class="card-body">
+                        <p class="card-text">China</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/U3XWi4V.jpg" alt="China">
+                    <div class="card-body">
+                        <p class="card-text">China</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/xutSqW2.jpg" alt="Romênia">
+                    <div class="card-body">
+                        <p class="card-text">Romênia</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/dcSvHmu.jpg" alt="Romênia">
+                    <div class="card-body">
+                        <p class="card-text">Romênia</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/6r0jqc6.jpg" alt="Romênia">
+                    <div class="card-body">
+                        <p class="card-text">Romênia</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/MTFxzaw.jpg" alt="Balcãs">
+                    <div class="card-body">
+                        <p class="card-text">Balcãs</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/fmvfDba.jpg" alt="Balcãs">
+                    <div class="card-body">
+                        <p class="card-text">Balcãs</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/cJ4jGvV.jpg" alt="Balcãs">
+                    <div class="card-body">
+                        <p class="card-text">Balcãs</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/HAsIQYq.jpg" alt="Filipinas">
+                    <div class="card-body">
+                        <p class="card-text">Filipinas</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/9fSSFLY.jpg" alt="Filipinas">
+                    <div class="card-body">
+                        <p class="card-text">Filipinas</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-m-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/ezRk2JV.jpg" alt="Filipinas">
+                    <div class="card-body">
+                        <p class="card-text">Filipinas</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/Av44kab.jpg" alt="Bulgaria">
+                    <div class="card-body">
+                        <p class="card-text">Bulgaria</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/pGmWTIL.jpg" alt="Bulgaria">
+                    <div class="card-body">
+                        <p class="card-text">Bulgaria</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/wXQBs9j.jpg" alt="Bulgaria">
+                    <div class="card-body">
+                        <p class="card-text">Bulgaria</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/wfh14r9.jpg" alt="Islândia">
+                    <div class="card-body">
+                        <p class="card-text">Islândia</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/jt8zgHj.jpg" alt="Islândia">
+                    <div class="card-body">
+                        <p class="card-text">Islândia</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/yJkDUHZ.jpg" alt="Islândia">
+                    <div class="card-body">
+                        <p class="card-text">Islândia</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
