--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.ibb.co/x1dcVJv/1.jpg" alt="Nepal">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Nepal</p>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.ibb.co/4T54S3y/2.jpg"" alt=" Nepal">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Nepal</p>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.ibb.co/4FCscQ9/3.jpg" alt="Nepal">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Nepal</p>
                     </div>
                 </div>
@@ -55,11 +55,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-12">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/a16bvld.jpg" alt="Iran">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Iran</p>
                     </div>
                 </div>
@@ -67,11 +67,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/cadgx10.jpg" alt="Iran">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Iran</p>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
             <div class="col-xl-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/wHnSueW.jpg" alt="Iran">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Iran</p>
                     </div>
                 </div>
@@ -87,11 +87,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/Sx2RMlC.jpg" alt="Georgia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Georgia</p>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/XnyYPyC.jpg"" alt=" Georgia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Georgia</p>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/7eZxJld.jpg" alt="Georgia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Georgia</p>
                     </div>
                 </div>
@@ -117,11 +117,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/Maem7Nv.jpg" alt="Macedônia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Macedônia</p>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/Bm51YBf.jpg" alt="Macedônia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Macedônia</p>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/UeAGYMZ.jpg" alt="Macedônia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Macedônia</p>
                     </div>
                 </div>
@@ -147,11 +147,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-12">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/fqXBDKP.jpg" alt="China">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">China</p>
                     </div>
                 </div>
@@ -159,11 +159,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/wyFyv80.jpg" alt="China">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">China</p>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
             <div class="col-xl-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/U3XWi4V.jpg" alt="China">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">China</p>
                     </div>
                 </div>
@@ -179,11 +179,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/xutSqW2.jpg" alt="Romênia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Romênia</p>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/dcSvHmu.jpg" alt="Romênia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Romênia</p>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/6r0jqc6.jpg" alt="Romênia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Romênia</p>
                     </div>
                 </div>
@@ -209,11 +209,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/MTFxzaw.jpg" alt="Balcãs">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Balcãs</p>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/fmvfDba.jpg" alt="Balcãs">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Balcãs</p>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/cJ4jGvV.jpg" alt="Balcãs">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Balcãs</p>
                     </div>
                 </div>
@@ -239,11 +239,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/HAsIQYq.jpg" alt="Filipinas">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Filipinas</p>
                     </div>
                 </div>
@@ -252,7 +252,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/9fSSFLY.jpg" alt="Filipinas">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Filipinas</p>
                     </div>
                 </div>
@@ -261,7 +261,7 @@
             <div class="col-xl-4 col-m-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/ezRk2JV.jpg" alt="Filipinas">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Filipinas</p>
                     </div>
                 </div>
@@ -269,11 +269,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-12">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/Av44kab.jpg" alt="Bulgaria">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Bulgaria</p>
                     </div>
                 </div>
@@ -281,11 +281,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/pGmWTIL.jpg" alt="Bulgaria">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Bulgaria</p>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
             <div class="col-xl-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/wXQBs9j.jpg" alt="Bulgaria">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Bulgaria</p>
                     </div>
                 </div>
@@ -301,11 +301,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-12">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/wfh14r9.jpg" alt="Islândia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Islândia</p>
                     </div>
                 </div>
@@ -313,11 +313,11 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class=" row mb-4">
             <div class="col-xl-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/jt8zgHj.jpg" alt="Islândia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Islândia</p>
                     </div>
                 </div>
@@ -325,13 +325,14 @@
             <div class="col-xl-6">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/yJkDUHZ.jpg" alt="Islândia">
-                    <div class="card-body">
+                    <div class="card-body p-2">
                         <p class="card-text">Islândia</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
