--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-4 col-m-6">
+        <div class="row">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.ibb.co/x1dcVJv/1.jpg" alt="Nepal">
                     <div class="card-body p-2">
@@ -35,7 +35,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.ibb.co/4T54S3y/2.jpg"" alt=" Nepal">
                     <div class="card-body p-2">
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.ibb.co/4FCscQ9/3.jpg" alt="Nepal">
                     <div class="card-body p-2">
@@ -55,8 +55,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-12">
+        <div class="row">
+            <div class="col-xl-12 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/a16bvld.jpg" alt="Iran">
                     <div class="card-body p-2">
@@ -67,8 +67,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-6">
+        <div class="row">
+            <div class="col-xl-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/cadgx10.jpg" alt="Iran">
                     <div class="card-body p-2">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-6">
+            <div class="col-xl-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/wHnSueW.jpg" alt="Iran">
                     <div class="card-body p-2">
@@ -87,8 +87,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-4 col-m-6">
+        <div class="row">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/Sx2RMlC.jpg" alt="Georgia">
                     <div class="card-body p-2">
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/XnyYPyC.jpg"" alt=" Georgia">
                     <div class="card-body p-2">
@@ -106,7 +106,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/7eZxJld.jpg" alt="Georgia">
                     <div class="card-body p-2">
@@ -117,8 +117,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-4 col-m-6">
+        <div class="row">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/Maem7Nv.jpg" alt="Macedônia">
                     <div class="card-body p-2">
@@ -127,7 +127,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/Bm51YBf.jpg" alt="Macedônia">
                     <div class="card-body p-2">
@@ -136,7 +136,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/UeAGYMZ.jpg" alt="Macedônia">
                     <div class="card-body p-2">
@@ -147,8 +147,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-12">
+        <div class="row">
+            <div class="col-xl-12 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/fqXBDKP.jpg" alt="China">
                     <div class="card-body p-2">
@@ -159,8 +159,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-6">
+        <div class="row">
+            <div class="col-xl-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/wyFyv80.jpg" alt="China">
                     <div class="card-body p-2">
@@ -168,7 +168,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-6">
+            <div class="col-xl-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/U3XWi4V.jpg" alt="China">
                     <div class="card-body p-2">
@@ -179,8 +179,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-4 col-m-6">
+        <div class="row">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/xutSqW2.jpg" alt="Romênia">
                     <div class="card-body p-2">
@@ -189,7 +189,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/dcSvHmu.jpg" alt="Romênia">
                     <div class="card-body p-2">
@@ -198,7 +198,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/6r0jqc6.jpg" alt="Romênia">
                     <div class="card-body p-2">
@@ -209,8 +209,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-4 col-m-6">
+        <div class="row">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/MTFxzaw.jpg" alt="Balcãs">
                     <div class="card-body p-2">
@@ -219,7 +219,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/fmvfDba.jpg" alt="Balcãs">
                     <div class="card-body p-2">
@@ -228,7 +228,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/cJ4jGvV.jpg" alt="Balcãs">
                     <div class="card-body p-2">
@@ -239,8 +239,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-4 col-m-6">
+        <div class="row">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/HAsIQYq.jpg" alt="Filipinas">
                     <div class="card-body p-2">
@@ -249,7 +249,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/9fSSFLY.jpg" alt="Filipinas">
                     <div class="card-body p-2">
@@ -258,7 +258,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-m-6">
+            <div class="col-xl-4 col-m-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/ezRk2JV.jpg" alt="Filipinas">
                     <div class="card-body p-2">
@@ -269,8 +269,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-12">
+        <div class="row">
+            <div class="col-xl-12 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/Av44kab.jpg" alt="Bulgaria">
                     <div class="card-body p-2">
@@ -281,8 +281,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-6">
+        <div class="row">
+            <div class="col-xl-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/pGmWTIL.jpg" alt="Bulgaria">
                     <div class="card-body p-2">
@@ -290,7 +290,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-6">
+            <div class="col-xl-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/wXQBs9j.jpg" alt="Bulgaria">
                     <div class="card-body p-2">
@@ -301,8 +301,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-12">
+        <div class="row">
+            <div class="col-xl-12 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/wfh14r9.jpg" alt="Islândia">
                     <div class="card-body p-2">
@@ -313,8 +313,8 @@
         </div>
     </div>
     <div class="container">
-        <div class=" row mb-4">
-            <div class="col-xl-6">
+        <div class="row">
+            <div class="col-xl-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/jt8zgHj.jpg" alt="Islândia">
                     <div class="card-body p-2">
@@ -322,7 +322,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-6">
+            <div class="col-xl-6 mb-4">
                 <div class="card">
                     <img class="card-img-top" src="https://i.imgur.com/yJkDUHZ.jpg" alt="Islândia">
                     <div class="card-body p-2">
